--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "joi": "^17.6.0",
-    "mongoose": "^6.2.6"
+    "mongoose": "^6.2.6",
+    "validator": "^13.7.0"
   }
 }
